# Todo-Agent

./: .gitignore  README.md  pyproject.toml
todo_agent/: config.py  crud.py  db.py  main.py  session_manager.py
todo_agent/agents/: executor.py  planner.py
todo_agent/tools/: search.py  web_scraper.py
