[project]
name = "todo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
]

[dependency-groups]
dev = [
    "deepagents>=0.2.7",
    "tavily-python>=0.7.13",
]
